# workshop-backend-20240907

./: .gitignore  Makefile  README.md  WORKSHOP_COMMISSION.md  WORKSHOP_SHIPPING_FEE.md  alembic.ini  pyproject.toml
.circleci/: config.yml
.devcontainer/: Dockerfile  add_shipping_fee.sh  devcontainer.json  docker-compose.yml  setup.sh
api/: db.py  main.py  migrate_db.py
api/cruds/: item.py
api/models/: item.py
api/routers/: item.py
api/schemas/: item.py
infra/nifcloud/: .gitignore  .tool-versions  README.md
infra/nifcloud/.devcontainer/: devcontainer.json  setup.sh
infra/nifcloud/ansible/: README.md  install-pkgs.yml
infra/nifcloud/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
migrations/: env.py
migrations/versions/: dc5ee2a25e98_create_table.py
tests/: test_main.py
